--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bcrypt": "^5.1.1",
     "express": "4.21.0",
     "jose": "^5.9.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "4.17.21",
     "@types/node": "20.16.5",
+    "@types/nodemailer": "^6.4.15",
     "prisma": "5.19.1",
     "ts-node": "10.9.2",
     "typescript": "5.6.2"
