--- a/package.json
+++ b/package.json
@@ -3,26 +3,37 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts"
-  },
+    "start": "nodemon src/index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "dependencies": {
     "@prisma/client": "5.19.1",
     "bcrypt": "^5.1.1",
-    "express": "4.21.0",
+    "express": "^4.21.0",
     "jose": "^5.9.2",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "4.17.21",
-    "@types/node": "20.16.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.16.5",
     "@types/nodemailer": "^6.4.15",
     "prisma": "5.19.1",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.6.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
-  }
+  },
+  "pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+  ]
 }
