--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "start": "nodemon src/index.ts",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && prisma generate",
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "prisma generate"
     },
   "dependencies": {
     "@prisma/client": "5.19.1",
